--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     Group Chat
    </a>
 
+   <a href="https://s.id/webinarbeljama" class="links">
+    Daftar Webinar
+   </a>
+
    <div class="logo">
     
     <h2 class="logo-title"> linkdee</h2>
